--- a/src/css/partials/_misc-classes.scss
+++ b/src/css/partials/_misc-classes.scss
@@ -84,6 +84,13 @@ pre[class*='language-'] {
   font-size: 13px;
   font-family: var(--arbitrum-font-family);
   box-shadow: var(--shadow-lg);
+  background-color: var(--arbitrum-popover);
+  color: var(--arbitrum-popover-foreground);
+  border: 1px solid var(--arbitrum-border);
+
+  .tippy-arrow {
+    color: var(--arbitrum-popover);
+  }
 }
 
 .tippy-content p:last-child {
